--- a/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Details.cshtml
+++ b/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Details.cshtml
@@ -1,18 +1,16 @@
-﻿
+﻿@{
+    //  Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 @model Tapas.Web.Models.Restaurant
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
-    <div> 
-        <section>
-            <h3>@Model.Name</h3>
-            <aside>@Model.Address</aside>
-        </section>
-    </div>
-</body>
-</html>
+<div>
+    <section>
+        <h3>@Model.Name</h3>
+        <aside>@Model.Address</aside>
+    </section>
+</div>
+@section DetailsPage
+    {
+    <h5>-------------The section to be rendered in Details Page only</h5>
+}
