--- a/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Index.cshtml
+++ b/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Index.cshtml
@@ -1,32 +1,27 @@
 ﻿@* Binding View with the Model=> Strongly Typed View *@
 @model IEnumerable<Tapas.Web.Models.Restaurant>
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div>
-        <table style="border:2px solid; border-collapse:collapse">
-            <thead>
-                <tr>
-                    <th>Name </th>
-                    <th>Address </th>
+@section DetailsPage
+    {
+    <h5>---------The section to be rendered in Details Page only</h5>
+}
+<div>
+    <table style="border:2px solid; border-collapse:collapse">
+        <thead>
+            <tr>
+                <th>Name </th>
+                <th>Address </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var rest in Model)
+            {
+                <tr style="border:2px solid black">
+                    <td>@rest.Name</td>
+                    <td>@rest.Address</td>
+                    <td>@Html.ActionLink("Details", "Details", new { id = rest.Id })</td>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var rest in Model)
-                {
-                    <tr style="border:2px solid black">
-                        <td>@rest.Name</td>
-                        <td>@rest.Address</td>
-                        <td>@Html.ActionLink("Details", "Details", new { id = rest.Id })</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</body>
-</html>
+            }
+        </tbody>
+    </table>
+</div>
