Implementing Layout, Partial Views and CRUD with Constructor  DI

--- a/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Create.cshtml
+++ b/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tapas.Web.Models.Restaurant
+﻿@model Tapas.DataLayer.Models.Restaurant
 
     @*<form method="post" action="~/Restaurants/Create">
             Name: <input type="text" id="name" name="name" />
