--- a/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Details.cshtml
+++ b/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Details.cshtml
@@ -2,7 +2,7 @@
     //  Layout = null;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model Tapas.Web.Models.Restaurant
+@model Tapas.DataLayer.Models.Restaurant
 
 <div>
     <section>
