--- a/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Index.cshtml
+++ b/Training Code/Week 3/Tapas/Tapas.Web/Views/Restaurants/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@* Binding View with the Model=> Strongly Typed View *@
-@model IEnumerable<Tapas.Web.Models.Restaurant>
+@model IEnumerable<Tapas.DataLayer.Models.Restaurant>
 
 @section DetailsPage
     {
