--- a/Training Code/Week 3/Tapas/Tapas.Web/Views/Home/Index.cshtml
+++ b/Training Code/Week 3/Tapas/Tapas.Web/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-﻿  <div> 
+﻿  
+<div> 
         @*<p><h1>Welcome @(Convert.ToInt32(ViewData["name"]) + 15)</h1></p>*@
         <h1>This is my Home Page</h1>
-        <h1>@(TempData.Peek("Training"))</h1>
-        
+        <h1>@(TempData.Peek("Training"))</h1>        
     </div>
+
