--- a/Training Code/Week 5/WebApiDemo/RestaurantReviewApi/Views/Home/Index.cshtml
+++ b/Training Code/Week 5/WebApiDemo/RestaurantReviewApi/Views/Home/Index.cshtml
@@ -1,24 +1,45 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
+    <h1>See Restaurants</h1>
+    <p class="lead">Call based on Web API using AJAX</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+        <p></p>
+      
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+       
+        <p>
+            @*@Ajax.ActionLink("Restaurants", // <-- Text to display
+           "",  
+           "api/Restaurant",
+            new AjaxOptions
+            {
+             UpdateTargetId = "List", // <-- DOM element ID to update
+             InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
+             HttpMethod = "GET" // <-- HTTP method
+
+            })*@
+
+            </p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        <h2>See Restaurants</h2>
+        <p><div id="List">Restaurants will displayed Shortly</div></p>
+        <p><input type="button" class="btn btn-default" value="Get Restaurants" onclick="Show();"/></p>
     </div>
 </div>
+<script>
+    function Show() {
+        debugger;
+        $.get({
+            url: "http://localhost:58558/api/Restaurant", success: function (result) {
+                debugger;
+                $("#List").html(result);
+            }
+        });
+    }
+</script>
