--- a/Training Code/Week 5/RestaurantReviewsRESTConsumer/RestaurantReviewsRESTConsumer/Views/Home/Index.cshtml
+++ b/Training Code/Week 5/RestaurantReviewsRESTConsumer/RestaurantReviewsRESTConsumer/Views/Home/Index.cshtml
@@ -3,29 +3,49 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><button type="button" class="btn btn-primary btn-lg" id="btnGetAll">Get All</button></p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<h2>Index</h2>
+
+<table class="table" id="tableGetAll"></table>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('#btnGetAll').click(function () {
+                var table = $('#tableGetAll');
+                table.empty();
+                table.append(
+                    $('<thead>').append(
+                        $('<tr>').append(
+                            $('<td>').text('Name'),
+                            $('<td>').text('Address'),
+                            $('<td>').text('URL'),
+                            $('<td>').text('Phone')
+                        )
+                    )
+                );
+                $.getJSON("http://localhost:62952/api/Restaurants")
+                    .done(function (data) {
+                        var tbody = $('<tbody>');
+                        table.append(tbody);
+                        $.each(data, function (i, item) {
+                            debugger;
+                            tbody.append(
+                                $('<tr>').append(
+                                    $('<td>').text(item.name),
+                                    $('<td>').text(item.address),
+                                    $('<td>').text(item.url),
+                                    $('<td>').text(item.phone)
+                                ));
+                        });
+                    })
+                    .fail(function (jqXHR, textStatus, errorThrown) {
+                        alert(textStatus);
+                        console.log(errorThrown);
+                    });
+            });
+        });
+    </script>
+}
