begin adding server-side api call to project

--- a/Training Code/Week 5/RestaurantReviewsRESTConsumer/RestaurantReviewsRESTConsumer/Views/Home/Index.cshtml
+++ b/Training Code/Week 5/RestaurantReviewsRESTConsumer/RestaurantReviewsRESTConsumer/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div class="jumbotron">
-    <p><button type="button" class="btn btn-primary btn-lg" id="btnGetAll">Get All</button></p>
+    <p><button type="button" class="btn btn-primary btn-lg" id="btnGetAll">Get All Client-Side</button></p>
+    <p>@Html.ActionLink("Get All Server-Side", "List", null, new { @class = "btn btn-primary btn-lg" })</p>
 </div>
 
 <h2>Index</h2>
