add pokemon detail view

--- a/Training Code/Week 6/AngularApp/src/app/pokemon/pokemon.component.html
+++ b/Training Code/Week 6/AngularApp/src/app/pokemon/pokemon.component.html
@@ -5,7 +5,7 @@
   <h3>Pokemons:</h3>
   <ol>
     <li *ngFor="let poke of pokemons">
-      {{poke.name}}, {{poke.height}}
+      <a routerLink="/pokemondetail/{{poke.name}}">{{poke.name}}</a>
     </li>
   </ol>
 </div>
